# settl

./: .gitignore  CATAN_RULES.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: docs.yml  release.yml  update-homebrew.yml
assets/: demo.tape
docs/: ai-players.md  controls.md  development.md  getting-started.md  how-to-play.md
homebrew/: settl.rb
personalities/: diplomat.toml  rusher.toml
scripts/: build-site.sh  generate-docs.mjs  install.sh
src/: anthropic_api.rs  config.rs  headless.rs  hooks.rs  lib.rs  main.rs
src/game/: actions.rs  board.rs  dice.rs  event.rs  mod.rs  orchestrator.rs  rules.rs  save.rs  state.rs
src/llamafile/: download.rs  mod.rs  process.rs
src/player/: anthropic_client.rs  human.rs  llamafile_player.rs  llm.rs  llm_player.rs  mod.rs  personality.rs  prompt.rs  random.rs  tui_human.rs
src/replay/: event.rs  mod.rs  recorder.rs  save.rs
src/trading/: mod.rs  negotiation.rs  offers.rs
src/ui/: board_image.rs  board_view.rs  chat_panel.rs  flow_tests.rs  game_log.rs  input_tests.rs  layout.rs  menu.rs  mod.rs  resource_bar.rs  screens.rs  snapshot_tests.rs  testing.rs
src/ui/snapshots/: settl__ui__snapshot_tests__docs.snap  settl__ui__snapshot_tests__main_menu.snap  settl__ui__snapshot_tests__new_game.snap  settl__ui__snapshot_tests__playing_action_bar.snap  settl__ui__snapshot_tests__playing_action_bar_small.snap  (+14 more)
tests/: board_image_test.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/public/: main.js  styles.css
website/src/data/: docsNav.ts
(+7 files in other folders)
